[project]
name = "cx.lmn.tag20210930.test1"
requires-python = ">= 3.12"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    #
    # installing dependencies
    # -----------------------
    "pip>=21.2",
    "pip-tools",
    #
    # style
    # -----
    "black",
    #
    # building the package
    # --------------------
    "build",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2", # <-- for dynamic version control
    #
    # publishing the package to PyPI
    # ------------------------------
    "twine",
]


[project.scripts]
test1 = "cx.lmn.tag20210930.test1:__main__.run"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py312']


[tool.pip-tools]
allow-unsafe = true
generate-hashes = true
resolver = "backtracking"

[tool.setuptools_scm]
